# changedetection-mcp-rs

./: .env.enc  .gitignore  Cargo.toml  Dockerfile  README.md  Taskfile.yml  full_spec.yaml
.agents/: settings.json.enc
.agents/skills/: build-fix.md  live-test.md  release-summary.md  test-fix.md
.agents/skills/release/: SKILL.md
.gemini/: settings.json  settings.json.enc
.gemini/commands/: build-fix.toml  live-test.toml  release-summary.toml  test-fix.toml
.github/workflows/: ci.yml  docker.yml  release.yml
conductor/: api-reference.md  index.md  product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/advanced_system_discovery_20260401/: index.md  metadata.json  spec.md
conductor/archive/advanced_watch_configuration_20260402/: spec.md
conductor/archive/analysis_and_visualization_20260403/: index.md  metadata.json  plan.md  spec.md
conductor/archive/api_mocking_wiremock_20260331/: index.md  metadata.json  spec.md
conductor/archive/api_resilience_20260331/: index.md  metadata.json  plan.md  spec.md
conductor/archive/automation_and_conditions_20260403/: index.md  metadata.json  plan.md  spec.md
conductor/archive/bulk_import_20260401/: index.md  metadata.json  plan.md  spec.md
conductor/archive/bulk_ops_and_efficiency_20260403/: index.md  metadata.json  plan.md  spec.md
conductor/archive/core_mcp_tools_20260330/: metadata.json  spec.md
conductor/archive/enhanced_observability_20260331/: index.md  metadata.json  plan.md  spec.md
conductor/archive/system_info_20260331/: index.md  (+2 more)
examples/: debug_headers.rs  debug_history.rs  dump_spec.rs  list_history.rs  test_api.rs
src/: cli.rs  lib.rs  main.rs
src/api/: mod.rs
src/mcp/: helpers.rs  mod.rs
src/observability/: mod.rs
tests/: api_client_test.rs  api_edge_cases_test.rs  api_full_spec_test.rs  api_history_diff_test.rs  api_import_test.rs  api_maintenance_test.rs  api_malformed_responses_test.rs  api_network_conditions_test.rs  api_notification_test.rs  api_processors_test.rs  api_resilience_test.rs  api_screenshot_test.rs  api_search_filtering_test.rs  api_snapshot_content_test.rs  api_snapshot_management_test.rs  api_state_management_test.rs  api_system_discovery_test.rs  api_watch_config_test.rs  live.rs  mcp_browser_steps_test.rs  mcp_consolidated_tools_test.rs  mcp_coverage_boost_test.rs  mcp_history_diff_test.rs  mcp_import_test.rs  mcp_maintenance_test.rs  mcp_notification_test.rs  mcp_optimization_helpers_test.rs  mcp_optimization_tests.rs  mcp_processors_test.rs  mcp_resources_test.rs  mcp_schema_test.rs  mcp_screenshot_test.rs  mcp_search_filtering_test.rs  mcp_server_test.rs  mcp_snapshot_content_test.rs  mcp_snapshot_management_test.rs  mcp_state_management_test.rs  mcp_system_discovery_test.rs  mcp_watch_config_test.rs  mcp_watch_filtering_test.rs  (+1 more)
tests/common/: mod.rs
tests/hurl/: error_handling.hurl  list_tools.hurl  list_watches.hurl  run_tests.sh  tag_management.hurl  test_tag_management.sh
(+132 files in other folders)
