[package]
name = "changedetection-mcp-rs"
version = "0.1.1"
edition = "2021"
authors = ["Nicholas Wilde <nicholas@nicholaswilde.io>"]
description = "A Model Context Protocol (MCP) server for ChangeDetection.io"
license = "Apache-2.0"
repository = "https://github.com/nicholaswilde/changedetection-mcp-rs"
readme = "README.md"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
anyhow = "1.0.83"
thiserror = "1.0.60"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
url = "2.5.0"
mcp-sdk-rs = "0.3.4"
# Add other dependencies from tech-stack.md if needed
dashmap = "5.5.3"
futures = "0.3.30"
async-trait = "0.1.80"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
reqwest-middleware = { version = "0.5.1", features = ["json"] }
reqwest-retry = { version = "0.9.1", features = ["tracing"] }
reqwest-conditional-middleware = "0.4.0"
http-cache-reqwest = "1.0.0-alpha.5"
schemars = "1.2.1"
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing-appender = "0.2.3"
tracing-serde = "0.2.0"
openssl = { version = "0.10", features = ["vendored"] }
base64 = "0.22.1"
serde_yaml = "0.9"

[dev-dependencies]
wiremock = "0.6.0"
tokio-test = "0.4.5"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
dotenv = "0.15.0"

# Profile for final production releases (smaller, faster)
[profile.release]
opt-level = "z" # Optimize for size
lto = true # Link Time Optimization (smaller binary)
codegen-units = 1 # Reduce parallel code generation for better optimization
panic = "abort" # Remove stack unwinding (smaller binary)
strip = true # Strip symbols (smaller binary)

# Profile for CI/CD builds (inherits from dev)
[profile.ci]
inherits = "dev"
incremental = false # Disable incremental compilation for CI
debug = 0 # No debug info needed for basic CI checks
